--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@ body{
     background-color: black;
     color: white;
     scroll-behavior: smooth;
+    margin: 0%;
+    padding:0%;
 
 }
 .header {
